[tool.poetry]
name = "LangGraph_Python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain = {extras = ["langgraph"], version = "^0.1.20"}
langchain-openai = "^0.1.6"
langchainhub = "^0.1.15"
tavily-python = "^0.3.3"
python-dotenv = "^1.0.1"
langgraph = "^0.0.49"
langchain-anthropic = "^0.1.12"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
